frontend/components/side_panels/SiteNavSidePanel/_styles.scss
.site-nav-item {
  position: relative;
  transition: color 200ms ease-in-out;
  cursor: pointer;

  &:hover {
    background-color: $core-black-over;
  }

  @include breakpoint(smalldesk) {
    justify-content: center;
  }

  &--multiple.site-nav-item--active {
    background-color: transparent;
    border-right: 0;

    &:hover {
      background-color: transparent;
    }

    .site-nav-item__link {
      border-right: 3px solid $core-blue;
      background-color: $core-black;
    }
  }

  &__icon {
    position: relative;
    font-size: $large;
    margin-right: 8px;
    width: 16px;
    height: 16px;
    vertical-align: sub;

    @include breakpoint(smalldesk) {
      margin-right: 0;
    }
  }

  &__name {
    text-decoration: none;
    vertical-align: middle;
    font-weight: $regular;
    font-size: $x-small;
  }

  a {
    color: $white;
    text-align: center;
    display: flex;
    align-items: center;
    padding: 14px 20px;

    @include breakpoint(smalldesk) {
      padding: 11px 14px;
    }
  }

  &--active {
    border-bottom: 3px solid $core-blue;
    background-color: $core-black;

    &:hover {
      background-color: $core-black;
    }

    .site-nav-item__name {
      font-weight: $bold;
    }
  }

  &:last-child {

    @include breakpoint(smalldesk) {
      margin-right: 0;
    }
  }
}

.site-nav-container {
  flex-grow: 1;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.site-nav-list {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
}

